--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -95,20 +95,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/software_wrap_dashed"
-        app:layout_constraintBottom_toTopOf="@+id/line2"/>
+        app:layout_constraintBottom_toBottomOf="@+id/software_wrap_dashed"/>
 
-    <com.xfinity.dahdit.DottedLine
-        android:id="@+id/line2"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        app:dotRadius="5dp"
-        app:minimumDotGap="4dp"
-        app:dotColor="#f00"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/line3"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line1"/>
 
     <com.xfinity.dahdit.DottedLine
         android:id="@+id/line3"
@@ -120,7 +108,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line2"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/dash_label"/>
 
@@ -135,6 +122,32 @@
         app:layout_constraintBottom_toBottomOf="@+id/line3"
         app:layout_constraintTop_toTopOf="@+id/line1"
         app:layout_constraintRight_toLeftOf="@+id/line1"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Dotted ring"
+        android:gravity="center_horizontal"
+        app:layout_constraintLeft_toRightOf="@id/line4"
+        app:layout_constraintTop_toBottomOf="@id/line1"
+        />
+
+    <com.xfinity.dahdit.DottedRing
+        android:layout_width="250dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        android:background="#EEEEEE"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:dotColor="#88fF0000"
+        app:minimumDotGap="15dp"
+        app:dotRadius="5dp"
+        app:layout_constraintBottom_toTopOf="@id/line3"
+        app:layout_constraintLeft_toRightOf="@id/line4"
+        app:layout_constraintTop_toBottomOf="@id/textView5"
+        app:layout_constraintVertical_bias="0.0"
+        />
+
     <TextView
         android:text="DottedLine Views"
         android:layout_width="wrap_content"
